tests/parser/invalidinput/tvu.idp
vocabulary V{
	type x
	p(x)
	f(x):x
}
structure S:V{
	x = {1..10}
	p<u> = {2}
	p = {1}
}
procedure main(){
	return 1	
}
